--- a/ui/index_template.html
+++ b/ui/index_template.html
@@ -33,8 +33,9 @@
   <body id="bootstrap-overrides">
   </body>
   <!-- Load wowhead scripts after done loading everything else -->
-  <script>const whTooltips = {colorLinks: true};</script>
-  <script src="https://wow.zamimg.com/js/tooltips.js"></script>
+  <!--<script>const whTooltips = {colorLinks: true};</script>
+  <script src="https://wow.zamimg.com/js/tooltips.js"></script>-->
 	<!--<script>const aowow_tooltips = {colorlinks: true}</script>
 	<script type="text/javascript" src="https://wotlk.evowow.com/static/widgets/power.js"></script>-->
+  <script type="text/javascript" src="/wotlk/tooltips.js"></script><script>var aowow_tooltips = { "colorlinks": false, "iconizelinks": false, "renamelinks": false }</script>
 </html>
